moving the mouse over the canvas draws a circle at the mouse position. width and height needs to be declared in the html to avoid weird stretching

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,6 @@ body{
 }
 canvas {
     background: white;
-    width:50vw;
-    height:50vh;
     position:absolute;
     margin: 1rem;
     /* transform: translate(-50%,-50%); */
